--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
 		   </ul>
         </div>
     </div>
+    <div class="body-part1">
+        <div class="container">
+            <div class="website-info">
+                <p id="website-title">This website is awesome</p>
+                <p id="website-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="sign-up">Sign up</button>
+            </div>
+            <div class="image">this is a placeholder for an image</div>
+        </div>
+    </div>
     <div class="footer">Copyright © The Odin Project</div>
 </body>
 </html>
