Add structure for body-part2

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
             <div class="image">this is a placeholder for an image</div>
         </div>
     </div>
+    <div class="body-part2">
+        <div class="random-info">Some random information.</div>
+        <div class="illustrations">
+            <div class="illustration">
+                <div class="blue-boxes"></div>
+                <div class="illustration-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustration">
+                <div class="blue-boxes"></div>
+                <div class="illustration-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustration">
+                <div class="blue-boxes"></div>
+                <div class="illustration-subtext">this is some subtext under an illustration or image</div>
+            </div>
+            <div class="illustration">
+                <div class="blue-boxes"></div>
+                <div class="illustration-subtext">this is some subtext under an illustration or image</div>
+            </div>
+        </div>
+    </div>
     <div class="footer">Copyright © The Odin Project</div>
 </body>
 </html>
