--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
     	<div class="header-logo">Header Logo</div>
-        <div class="header-links">
+        <div class="header-links subtext">
          <ul>
             <li><a href="#">header link one</a></li>
             <li><a href="#">header link two</a></li>
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="website-info">
                 <p id="website-title">This website is awesome</p>
-                <p id="website-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <p id="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="sign-up">Sign up</button>
             </div>
             <div class="image">this is a placeholder for an image</div>
@@ -32,19 +32,19 @@
         <div class="illustrations">
             <div class="illustration">
                 <div class="blue-boxes"></div>
-                <div class="illustration-subtext">this is some subtext under an illustration or image</div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="illustration">
                 <div class="blue-boxes"></div>
-                <div class="illustration-subtext">this is some subtext under an illustration or image</div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="illustration">
                 <div class="blue-boxes"></div>
-                <div class="illustration-subtext">this is some subtext under an illustration or image</div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
             <div class="illustration">
                 <div class="blue-boxes"></div>
-                <div class="illustration-subtext">this is some subtext under an illustration or image</div>
+                <div class="subtext">this is some subtext under an illustration or image</div>
             </div>
         </div>
     </div>
