--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
             </div>
         </div>
     </div>
+    <div class="body-quote">
+        <div class="quote-block">
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quoted"> -Thor, norse God of Thunder</div>
+        </div>
+    </div>
     <div class="footer">Copyright © The Odin Project</div>
 </body>
 </html>
