--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
             <div class="quoted"> -Thor, norse God of Thunder</div>
         </div>
     </div>
+    <div class="call-block">
+        <div class="sign-up-card">
+            <div class="sign-up-card-text">
+                <div>Call to action! It's time!</div>
+                <div class="subtext">Sign up for our product by clicking that button over there!</div>
+            </div>
+            <button class="sign-up">Sign up</button>
+        </div>
+    </div>
     <div class="footer">Copyright © The Odin Project</div>
 </body>
 </html>
