--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <div class="call-block">
         <div class="sign-up-card">
             <div class="sign-up-card-text">
-                <div>Call to action! It's time!</div>
+                <div class="upper-text">Call to action! It's time!</div>
                 <div class="subtext">Sign up for our product by clicking that button over there!</div>
             </div>
-            <button class="sign-up">Sign up</button>
+            <button class="sign-up" id="call-button">Sign up</button>
         </div>
     </div>
     <div class="footer">Copyright © The Odin Project</div>
